[gd_scene load_steps=2 format=3 uid="uid://crjumbkujnhpg"]

[ext_resource type="Script" path="res://Scenes/Prototype/ProceduralGeneration/procedural_generator.gd" id="1_656ed"]

[node name="ProceduralGenerator" type="Node2D"]
script = ExtResource("1_656ed")
bird_min_spawn_interval = null
bird_max_spawn_interval = null

[node name="ObstacleSpawnTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="BirdSpawnTimer" type="Timer" parent="."]
wait_time = 0.5

[connection signal="timeout" from="ObstacleSpawnTimer" to="." method="_on_rock_spawn_timer_timeout"]
[connection signal="timeout" from="BirdSpawnTimer" to="." method="_on_bird_spawn_timer_timeout"]
